# environment_monitor

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml  rosdep.yaml  stack.xml
hardware/firmware/: Makefile  monitor.ino
nodes/: environment-monitor  environment-monitor.py
software/: environment-monitor.py
