<package format="2">
  <name>environment_monitor</name>
  <version>1.1.0</version>
  <description>environment_monitor</description>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>GPL</license>
  <author>John Stowers</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>arduino-udev</depend>
</package>
